--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -98,7 +98,7 @@
                 <div class="media-body">
                   <h4 class="media-heading">
                     <a href="{{ path('adstacy_app_user_profile', {username: commentUser.username}) }}">{{ commentUser.realName }}</a>
-                    <small class="text-muted">{{ ago(comment.created) }}</small>
+                    <small class="text-muted">&middot; {{ ago(comment.created) }}</small>
                   </h4>
                   <div>{{ parse_url(parse_hashtag(parse_mention(comment.content))) }}</div>
                 </div>
