Fix remember me.

--- a/src/Adstacy/UserBundle/Resources/views/Includes/login.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Includes/login.html.twig
@@ -22,7 +22,7 @@
   <div class="form-group clearfix">
     <div class="checkbox pull-left">
       <label for="remember_me">
-        <input type="checkbox" id="remember_me" name="_remember_me" value="on">
+        <input type="checkbox" id="remember_me" name="_remember_me" value="on" checked="checked">
         {{ 'security.login.remember_me'|trans }}
       </label>
     </div>
