--- a/src/Adstacy/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Security/login.html.twig
@@ -42,7 +42,7 @@
       <div class="form-group clearfix">
         <div class="checkbox pull-left">
           <label for="_remember_me">
-            <input type="checkbox" id="_remember_me" name="_remember_me" value="on">
+            <input type="checkbox" id="_remember_me" name="_remember_me" value="on" checked="checked">
             {{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}
           </label>
         </div>
