Changed Activity menu to promotes count.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -77,13 +77,14 @@
     color: #b00;
     font-size: 20px;
     margin: 0;
-    margin-bottom: 3px;
+    margin-bottom: 5px;
   }
   .about {
     color: #999;
     font-size: 13px;
     line-height: 1.5;
     margin: 0;
+    margin-bottom: 5px;
     min-height: 50px;
     .empty {
       color: #aaa;
@@ -137,7 +138,7 @@
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: @screen-phone) {
   #user-profile {
     margin-left: 0;
     margin-right: 0;
