--- a/src/Adstacy/AppBundle/Resources/views/User/show_ads.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show_ads.html.twig
@@ -66,12 +66,12 @@
       </div>
       <div id="user-profile-menu" class="clearfix">
         <div class="pull-left">
+          <a class="score" href="{{ path('adstacy_app_user_ads', {username: user.username}) }}">Ads<b>{{ adsCount }}</b></a>
+          <a class="score" href="{{ path('adstacy_app_user_ads', {username: user.username}) }}">Promotes<b>{{ adsCount }}</b></a>
           <a class="score" href="{{ path('adstacy_app_user_followers', {username: user.username}) }}">Followers<b><span class="user-followers-count">{{ followersCount }}</span></b></a>
           <a class="score" href="{{ path('adstacy_app_user_followings', {username: user.username}) }}">Followings<b>{{ followingsCount }}</b></a>
-          <a class="score" href="{{ path('adstacy_app_user_ads', {username: user.username}) }}">Ads<b>{{ adsCount }}</b></a>
         </div>
         <div class="pull-right">
-          <a href="#" class="btn btn-default btn-sm">Activity</a>
           {% if app.user %}
             {% if app.user != user %}
               {% set followed = app.user.hasFollowUser(user) %}
