--- a/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
@@ -63,3 +63,4 @@
 @import "./layout/feeds.less";
 @import "./layout/show_ad.less";
 @import "./layout/user.less";
+@import "./layout/notification.less";
