contraint create ad desc height.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
@@ -13,13 +13,16 @@
     margin: 10px 0;
   }
 
-  textarea.form-control {
-    resize: vertical;
-  }
   span.help {
     color: #999;
     font-size: 12px;
   }
+}
+
+//short desc textarea
+#ad_description {
+  resize: none;
+  height: 74px;
 }
 
 #show-long-desc-btn, #chars-left-box {
