--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -37,7 +37,7 @@
       </form>
 
       <div id="extra-nav-box" class="btn-group navbar-btn navbar-left">
-        <a href="{{ path('adstacy_app_stream') }}" class="btn btn-default extra-nav" title="Stream"><i class="icon-bullhorn"></i>&nbsp; {{"stream"|trans}}</a>
+        <a href="{{ path('adstacy_app_stream') }}" class="btn btn-default extra-nav" title="Stream"><i class="icon-home"></i>&nbsp; {{"stream"|trans}}</a>
         <a href="{{ path('adstacy_app_explore') }}" class="btn btn-default extra-nav" title="Explore"><i class="icon-globe"></i>&nbsp; Explore</a>
         <a href="{{ path('adstacy_app_trending') }}" class="btn btn-default extra-nav" title="Trending"><i class="icon-rocket"></i>&nbsp; Trending</a>
         <div id="site-nav-dropdown" class="btn-group">
@@ -49,7 +49,7 @@
           <div id="site-nav-box" class="dropdown-menu pull-right">
             <nav>
               <ul id="site-nav" class="dropdown-box-header list-inline list-unstyled">
-                <li><a href="{{ path('adstacy_app_stream') }}" title="Stream"><i class="icon-bullhorn"></i>&nbsp; {{"stream"|trans}}</a></li>
+                <li><a href="{{ path('adstacy_app_stream') }}" title="Stream"><i class="icon-home"></i>&nbsp; {{"stream"|trans}}</a></li>
                 <li><a href="{{ path('adstacy_app_explore') }}" title="Explore"><i class="icon-globe"></i>&nbsp; Explore</a></li>
                 <li><a href="{{ path('adstacy_app_trending') }}" title="Trending"><i class="icon-rocket"></i>&nbsp; Trending</a></li>
               </ul>
@@ -119,9 +119,9 @@
       </div>
       <ul id="mobile-nav" class="nav navbar-nav navbar-right">
         {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-        <li><a href="{{ path('adstacy_app_stream') }}"><i class="icon-bullhorn"></i>&nbsp; {{"stream"|trans}}</a></li>
+        <li><a href="{{ path('adstacy_app_stream') }}"><i class="icon-home"></i>&nbsp; {{"stream"|trans}}</a></li>
         {% endif %}
-        <li><a href="{{ path('adstacy_app_explore') }}" title="Explore"><i class="icon-home"></i>&nbsp; Explore</a></li>
+        <li><a href="{{ path('adstacy_app_explore') }}" title="Explore"><i class="icon-globe"></i>&nbsp; Explore</a></li>
         <li><a href="{{ path('adstacy_app_trending') }}" title="Trending"><i class="icon-rocket"></i>&nbsp; Trending</a></li>
         <li><a href="{{ path('adstacy_app_tags') }}" title="Trending"><i class="icon-tags"></i>&nbsp; Popular Tags</a></li>
         {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
