--- a/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
@@ -91,7 +91,7 @@
         </section>
         <section class="section">
           <div class="section-figure">
-            <i class="icon-bullhorn"></i>
+            <i class="icon-home"></i>
           </div>
           <h1 class="section-title">{{ "landing.features.stream.heading"|trans|raw }}</h1>
           <p class="lead">{{ "landing.features.stream.desc"|trans|raw }}</p>
