--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -77,10 +77,12 @@
           </div>
         </div>
         {% endblock %}
-        {% set allFlashes = app.session.flashbag.all() %}
+        {% set allFlashes = {success: app.session.flashbag.get('success')} %}
+        {% set allFlashes = allFlashes|merge({warning: app.session.flashbag.get('warning')}) %}
+        {% set allFlashes = allFlashes|merge({error: app.session.flashbag.get('error')}) %}
         {% if allFlashes|length > 0 %}
           <div class="adstacy-container">
-            {% for key, flashes in allFlashes %}
+            {% for key,flashes in allFlashes %}
               {% for flash in flashes %}
                 <div class="alert alert-{{ key }}">{{ flash }}</div>
               {% endfor %}
