--- a/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
@@ -12,7 +12,7 @@
     </div>
   {% else %}
     <div class="page-title jumbotron text-center">
-      <h1>My Stream</h1>
+      <h1>{{"stream"|trans}}</h1>
     </div>
     <div class="masonry jscroll clearfix">
       {% include 'AdstacyAppBundle:App:feeds.html.twig' %}
