Add username to user profile page.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -61,7 +61,7 @@
   .profile-picture {
     border-radius: 3px 0 0 0;
     float: left;
-    margin-right: 10px;
+    margin: 10px;
 
     img {
       border-radius: 3px 0 0 0;
@@ -71,7 +71,7 @@
   }
   .user-profile-desc {
     float: left;
-    width: 342px;
+    width: 332px;
   }
 }
 #user-profile-info {
@@ -81,6 +81,18 @@
     font-size: 20px;
     margin: 0;
     margin-bottom: 5px;
+
+    a {
+      display: inline-block;
+      vertical-align: middle;
+    }
+
+    small {
+      color: #aaa;
+      display: inline-block;
+      font-size: 14px;
+      vertical-align: middle;
+    }
   }
   .about {
     color: #999;
