--- a/src/Adstacy/AppBundle/Resources/public/less/layout/notification.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/notification.less
@@ -18,16 +18,12 @@
 }
 
 #top-notifications {
+  font-size: 12px;
   width: 400px;
 
-  & > li {
-    font-size: 12px;
-
-    & > div {
-      float: left;
-      width: 300px;
-    }
-
+  & > li > div {
+    float: left;
+    width: 300px;
   }
 
   & > li:hover {
@@ -38,7 +34,6 @@
   time {
     color: #aaa;
   }
-
 
   .notif-pic {
     float: left;
@@ -54,7 +49,6 @@
 
 #show-all-notifications {
   background-color: #f5f5f5;
-  font-size: 14px;
   text-align: center;
   a {
     color: #999;
@@ -65,6 +59,13 @@
   a:hover {
     background-color: #eee;
   }
+}
+
+#no-new-notification {
+  color: #ccc;
+  font-size: 14px;
+  padding: 10px 15px;
+  text-align: center;
 }
 
 @media screen and (max-width: @screen-tablet) {
