--- a/src/Adstacy/NotificationBundle/Resources/views/notifications.html.twig
+++ b/src/Adstacy/NotificationBundle/Resources/views/notifications.html.twig
@@ -1,11 +1,15 @@
 <ul id="{{ id }}" class="{% if id == 'top-notifications' %}dropdown-menu{% else %}list-group{% endif %}">
-  {% for notification in notifications %}
-    <li class="list-group-item clearfix">
-      <img src="{{ profile_pic(notification.user) }}" class="notif-pic" />
-      {{ notification.content|raw }}
-      <time>{{ ago(notification.created) }}</time>
-    </li>
-  {% endfor %}
+  {% if notifications|length > 0 %}
+    {% for notification in notifications %}
+    <li class="clearfix{% if id == 'top-notifications' %} list-group-item{% endif %}">
+        <img src="{{ profile_pic(notification.user) }}" class="notif-pic" />
+        {{ notification.content|raw }}
+        <time>{{ ago(notification.created) }}</time>
+      </li>
+    {% endfor %}
+  {% elseif id == 'top-notifications' %}
+    <li id="no-new-notification">No New Notification</li>
+  {% endif %}
 
   {% if id == 'top-notifications' %}
     <li id="show-all-notifications" class="list-group-item"><a href="">Show All Notifications</a></li>
