--- a/src/Adstacy/AppBundle/Resources/views/App/notifications.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/notifications.html.twig
@@ -2,6 +2,6 @@
 
 {% block content %}
   <div class="adstacy-container">
-    {{ render_notification(50, 'notifications') }}
+    {{ render_all_notification() }}
   </div>
 {% endblock %}
