Fix no new notifications.

--- a/src/Adstacy/NotificationBundle/Resources/views/notifications.html.twig
+++ b/src/Adstacy/NotificationBundle/Resources/views/notifications.html.twig
@@ -7,5 +7,5 @@
     </li>
   {% endfor %}
 {% else %}
-  <li id="show-all-notifications" class="list-group-item"><a href="">Show All Notifications</a></li>
+  <li class="no-new-notifications">No New Notifications</li>
 {% endif %}
