--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -86,8 +86,8 @@
             </ul>
           </div>
           {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-            <div id="notif-btn" class="navbar-btn">
-              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+          <div id="notif-btn" class="navbar-btn">
+              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-href="{{ path('adstacy_notification_readall') }}">
                 <i class="icon-rss"></i>
                 <span id="notif-count" class="label label-primary">{{app.user.notificationsCount}}</span>
               </button>
@@ -127,7 +127,7 @@
         <li><a href="{{ path('adstacy_app_trending') }}" title="Trending"><i class="icon-rocket"></i>&nbsp; Trending</a></li>
         <li><a href="{{ path('adstacy_app_tags') }}" title="Trending"><i class="icon-tags"></i>&nbsp; Popular Tags</a></li>
         {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-        <li><a href="{{ path('adstacy_app_notifications') }}"><i class="icon-rss"></i>&nbsp; {{ "Notification"|trans }}</a></li>
+        <li><a href="{{ path('adstacy_notification_show') }}"><i class="icon-rss"></i>&nbsp; {{ "Notification"|trans }}</a></li>
         <li><a href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}"><i class="icon-user"></i>&nbsp; {{"profile"|trans}}</a></li>
         <li><a href="{{ path('fos_user_profile_edit') }}"><i class="icon-gear"></i>&nbsp; {{"settings"|trans}}</a></li>
         <li><a href="{{ path('fos_user_security_logout') }}"><i class="icon-off"></i>&nbsp; {{"logout"|trans}}</a></li>
