--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -89,7 +89,7 @@
             <div id="notif-btn" class="navbar-btn">
               <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                 <i class="icon-rss"></i>
-                <span id="notif-count" class="label label-primary">{{app.user.notificationsCount}}</span>
+                <span class="notif-count label label-primary">{{app.user.notificationsCount}}</span>
               </button>
               {{ render_top_notification(5) }}
             </div>
@@ -121,13 +121,13 @@
 
       <ul id="mobile-nav" class="nav navbar-nav navbar-right">
         {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+        <li><a href="{{ path('adstacy_app_notifications') }}"><i class="icon-rss"></i>&nbsp; {{ "Notification"|trans }}<span class="notif-count label label-primary">1</span></a></li>
         <li><a href="{{ path('adstacy_app_stream') }}"><i class="icon-home"></i>&nbsp; {{"stream"|trans}}</a></li>
         {% endif %}
         <li><a href="{{ path('adstacy_app_explore') }}" title="Explore"><i class="icon-globe"></i>&nbsp; Explore</a></li>
         <li><a href="{{ path('adstacy_app_trending') }}" title="Trending"><i class="icon-rocket"></i>&nbsp; Trending</a></li>
         <li><a href="{{ path('adstacy_app_tags') }}" title="Trending"><i class="icon-tags"></i>&nbsp; Popular Tags</a></li>
         {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-        <li><a href="{{ path('adstacy_app_notifications') }}"><i class="icon-rss"></i>&nbsp; {{ "Notification"|trans }}</a></li>
         <li><a href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}"><i class="icon-user"></i>&nbsp; {{"profile"|trans}}</a></li>
         <li><a href="{{ path('fos_user_profile_edit') }}"><i class="icon-gear"></i>&nbsp; {{"settings"|trans}}</a></li>
         <li><a href="{{ path('fos_user_security_logout') }}"><i class="icon-off"></i>&nbsp; {{"logout"|trans}}</a></li>
