--- a/src/Adstacy/NotificationBundle/Resources/views/all_notifications.html.twig
+++ b/src/Adstacy/NotificationBundle/Resources/views/all_notifications.html.twig
@@ -1,3 +1,16 @@
+<div class="page-title jumbotron text-center">
+  <h1>Notifications</h1>
+</div>
 <ul id="all-notifications" class="list-group notifications">
-  {% include 'AdstacyNotificationBundle::notifications.html.twig' with {notifications: notifications} %}
+  {% if notifications|length > 0 %}
+    {% for notification in notifications %}
+      <li class="list-group-item clearfix">
+        <img src="{{ profile_pic(notification.user) }}" class="notif-pic" />
+        <time>{{ ago(notification.created) }}</time>
+        {{ notification.content|raw }}
+      </li>
+    {% endfor %}
+  {% else %}
+    <li class="no-new-notifications">{{ 'notif.not_found'|trans }}</li>
+  {% endif %}
 </ul>
