Fixed show ad responsiveness.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
@@ -183,9 +183,14 @@
     text-align: center;
     .owner-action {
       display: block;
+      width: 100%;
       .btn {
+        display: block;
         margin-top: 5px;
-        width: 45%;
+        width: 100%;
+      }
+      .owner-action-label {
+        display: inline-block;
       }
     }
   }
