Fix notification translations.

--- a/src/Adstacy/NotificationBundle/Resources/views/all_notifications.html.twig
+++ b/src/Adstacy/NotificationBundle/Resources/views/all_notifications.html.twig
@@ -11,6 +11,6 @@
       </li>
     {% endfor %}
   {% else %}
-    <li class="no-new-notifications">{{ 'notif.not_found'|trans }}</li>
+    <li class="no-new-notifications">{{ 'notification.no_notification'|trans }}</li>
   {% endif %}
 </ul>
