Add register link to login.

--- a/src/Adstacy/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Security/login.html.twig
@@ -55,6 +55,7 @@
 
     <div class="panel-footer">
       <div>
+        <a style="margin-right: 25px" href="{{ path('fos_user_registration_register') }}">{{ "no_account_register"|trans }}</a>
         <a href="{{ path('fos_user_resetting_request') }}">{{ "forgot_password"|trans }}</a>
       </div>
     </div>
