--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -1,7 +1,7 @@
 @import "../variables.less";
 @import "../mixins.less";
 
-.ad {
+.advert {
   width: 236px;
   margin: 14px 7px 0 7px;
   background-color: #fff;
@@ -10,7 +10,7 @@
   border-radius: @border-radius-base;
   .box-shadow(0 1px 1px @gray-light);
 
-  .ad-sect {
+  .advert-sect {
     border-top: 1px solid @border-color;
     padding: @padding-small-vertical @padding-small-horizontal;
 
@@ -20,7 +20,7 @@
     }
   }
 
-  .ad-counter {
+  .advert-counter {
     border-top: 0;
 
     a {
@@ -32,14 +32,14 @@
     }
   }
 
-  .ad-user {
+  .advert-user {
     border-top: 1px solid @border-color;
     border-radius: 0 0 @border-radius-base @border-radius-base;
     margin-top: 5px;
     position: relative;
   }
 
-  .ad-user-action {
+  .advert-user-action {
     position: absolute;
     right: 0;
     top: 0;
@@ -69,7 +69,7 @@
   }
 }
 
-.ad-image {
+.advert-image {
   background-image: url('../img/diagonal-line.png');
   border-radius: @border-radius-base @border-radius-base 0 0;
   position: relative;
@@ -80,7 +80,7 @@
   }
 }
 
-.ad-comment {
+.advert-comment {
   .comment-box {
     width: 100%;
     height: 44px;
@@ -127,13 +127,13 @@
 }
 
 @media screen and (max-width: 480px) {
-  .ad {
+  .advert {
     border-radius: 0;
     height: auto;
     margin: 10px 0;
     width: 100%;
   }
-  .ad-image img {
+  .advert-image img {
     border-radius: 0;
     height: auto;
     display: block;
