--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -1,5 +1,5 @@
-<div class="ad masonry-item">
-  <div class="ad-image">
+<div class="advert masonry-item">
+  <div class="advert-image">
     <a href="{{ path('adstacy_app_ad_show', {id: ad.id}) }}">
       <img class="lazy" src="{{ asset('bundles/adstacyapp/img/transparent.gif') }}"
         data-original="{{ vich_uploader_asset(ad, 'image')|imagine_filter('thumbnail') }}"
@@ -9,18 +9,18 @@
   </div>
 
   {# weird bugs. cannot use ad-section class name #}
-  <div class="ad-sect break-word">
+  <div class="advert-sect break-word">
     <p>{{ parse_url(parse_hashtag(ad.description)) }}</p>
   </div>
 
-  <div class="ad-sect ad-counter text-overflow">
+  <div class="advert-sect advert-counter text-overflow">
     <a href="{{ path('adstacy_app_ad_promotes', {id: ad.id}) }}"><span class="promotes-count">{{ ad.promoteesCount }}</span> Promotes</a>
     <a href="{{ path('adstacy_app_ad_show', {id: ad.id}) }}#comments"><span class="comments-count">{{ ad.commentsCount }}</span> Comments</a>
   </div>
 
-  <div class="ad-sect ad-user clearfix">
+  <div class="advert-sect advert-user clearfix">
     {% include 'AdstacyAppBundle:User:user_mini.html.twig' with {user: ad.user, text: ago(ad.created), as_link: true} %}
-    <div class="ad-user-action btn-group">
+    <div class="advert-user-action btn-group">
       {% if app.user %}
         {% set promoted = app.user.hasPromote(ad) %}
         <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-primary btn-promote promote {% if promoted %}hide{% endif %}" title="Promote">
@@ -39,7 +39,7 @@
         <a class="btn btn-default dropdown-toggle" data-toggle="dropdown">
           <i class="icon-share"></i>
         </a>
-        <ul class="ad-social-list dropdown-menu pull-right">
+        <ul class="advert-social-list dropdown-menu pull-right">
           <li>
             {% set adUrl = url('adstacy_app_ad_show', {id: ad.id}) %}
             {% set tags = ad.tags|join(',') %}
@@ -63,7 +63,7 @@
     {% if app.user %}
       {% set followingsWhoPromoted = app.user.getFollowingsPromoted(ad) %}
       {% if followingsWhoPromoted|length > 0 %}
-        <div class="ad-sect">
+        <div class="advert-sect">
           <p class="text-muted">{{"promoted_by"|trans}}
             <a class="link-muted" href="#">
               <b>{{ followingsWhoPromoted|join(', ') }}</b>
@@ -73,7 +73,7 @@
       {% endif %}
     {% endif %}
   {% endif %}
-  <div class="ad-comment">
+  <div class="advert-comment">
     <form action="{{ path('adstacy_app_ad_comment', {id: ad.id}) }}" method="post">
       <textarea name="comment[content]" required="required" class="comment-box" placeholder="{{"form_comment.placeholders.content"|trans}}"></textarea>
       <input type="submit" value="{{"comment"|trans}}" class="hide">
