--- a/src/Adstacy/AppBundle/Resources/views/Ad/show_promotes.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show_promotes.html.twig
@@ -36,7 +36,7 @@
         callback: function(a, b) {
           var $users = $('.jscroll-added:last .user');
           $masonry = $('.masonry').masonry('appended', $users);
-          $users.find('.ad-social').ajaxlink('follow_user');
+          $users.find('.advert-social-list').ajaxlink('follow_user');
         }
       });
     });
