--- a/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
@@ -44,7 +44,7 @@
       $('.jscroll').jscroll({
         nextSelector: 'a.next-page',
         callback: function() {
-          var $ads = $('.jscroll-added:last .ad');
+          var $ads = $('.jscroll-added:last .advert');
           $('.masonry').masonry('appended', $ads);
           $ads.find('img.lazy').lazyload();
           $ads.ajaxlink('ads');
