fix some show-ad convention.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
@@ -23,7 +23,7 @@
   width: 750px;
   float: left;
 
-  .ad-desc {
+  .show-ad-desc {
     font-size: 14px;
 
     p {
@@ -49,7 +49,7 @@
   }
 
   .owner-action-label {
-    display: inline-block; 
+    display: inline-block;
     margin-left: 4px;
   }
 
@@ -155,7 +155,7 @@
   .panel {
     border-radius: 0;
   }
-  
+
   #show-ad, #show-ad-content, #show-ad-long-desc {
     width: 100% !important;
   }
@@ -164,7 +164,7 @@
     display: none;
   }
 
-  #ad-content {
+  #show-ad-long-desc {
     img {
       margin-bottom: 10px;
       max-width: 100%;
@@ -174,7 +174,7 @@
   #show-ad-toolbar {
     .social-label, .owner-action-label {
       display: none;
-    } 
+    }
   }
 }
 
