--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -85,7 +85,7 @@
     width: 100%;
     height: 44px;
     padding: 2px 8px;
-    background-color: #f4f4f4;
+    background-color: #eee;
     resize: none;
     border: solid @border-color;
     border-width: 1px 0 0 0;
