--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -7,9 +7,7 @@
         <i class="icon-bar"></i>
         <i class="icon-bar"></i>
       </button>
-      <a class="navbar-brand" href="{{ path('homepage') }}" title="Adstacy">
-        <img src="{{ asset('bundles/adstacyapp/img/logo.png') }}" alt="Adstacy">
-      </a>
+      <a class="navbar-brand" href="{{ path('homepage') }}" title="Adstacy"></a>
     </div>
 
     <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -35,38 +33,6 @@
         </div>
         <input id="search-type" type="hidden" name="type" value="{% if isSearchUser %}users{% else %}ads{% endif %}">
       </form>
-
-      <div id="extra-nav-box" class="btn-group navbar-btn navbar-left">
-        <a href="{{ path('adstacy_app_stream') }}" class="btn btn-default extra-nav" title="{{"stream"|trans}}"><i class="icon-home"></i>&nbsp; {{"stream"|trans}}</a>
-        <a href="{{ path('adstacy_app_explore') }}" class="btn btn-default extra-nav" title="Explore"><i class="icon-globe"></i>&nbsp; Explore</a>
-        <a href="{{ path('adstacy_app_trending') }}" class="btn btn-default extra-nav" title="Trending"><i class="icon-rocket"></i>&nbsp; Trending</a>
-        <div id="site-nav-dropdown" class="btn-group">
-          <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-            <i class="icon-bar"></i>
-            <i class="icon-bar"></i>
-            <i class="icon-bar"></i>
-          </button>
-          <div id="site-nav-box" class="dropdown-menu pull-right">
-            <nav>
-              <ul id="site-nav" class="dropdown-box-header list-inline list-unstyled">
-                <li><a href="{{ path('adstacy_app_stream') }}" title="{{"stream"|trans}}"><i class="icon-home"></i>&nbsp; {{"stream"|trans}}</a></li>
-                <li><a href="{{ path('adstacy_app_explore') }}" title="Explore"><i class="icon-globe"></i>&nbsp; Explore</a></li>
-                <li><a href="{{ path('adstacy_app_trending') }}" title="Trending"><i class="icon-rocket"></i>&nbsp; Trending</a></li>
-              </ul>
-            </nav>
-            <ul id="tag-list" class="dropdown-box-body list-inline list-unstyled">
-              {% include 'AdstacyAppBundle:App:tag_list.html.twig' %}
-            </ul>
-            <ul id="site-info" class="dropdown-box-footer list-inline list-unstyled">
-              <li><a href="{{ path('adstacy_app_page_show', {key: 'about'}) }}">{{"about"|trans}}</a></li>
-              <li><a href="{{ path('adstacy_app_page_show', {key: 'terms'}) }}">{{"terms"|trans}}</a></li>
-              <li><a href="{{ path('adstacy_app_page_show', {key: 'privacy-policy'}) }}">{{"privacy"|trans}}</a></li>
-              <li><a href="{{ path('adstacy_app_contact') }}">{{"contact_us"|trans}}</a></li>
-            </ul>
-          </div>
-        </div>
-
-      </div>
 
       <div class="navbar-right">
         {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
@@ -133,6 +99,27 @@
         <li><a href="{{ path('fos_user_security_logout') }}"><i class="icon-off"></i>&nbsp; {{"logout"|trans}}</a></li>
         {% endif %}
       </ul>
+    </div>
+  </div>
+
+  <div id="extra-nav-box">
+    <div class="adstacy-container">
+      <div class="btn-group navbar-btn">
+        <a href="{{ path('adstacy_app_stream') }}" class="btn btn-default extra-nav" title="{{"stream"|trans}}"><i class="icon-home"></i>&nbsp; {{"stream"|trans}}</a>
+        <a href="{{ path('adstacy_app_explore') }}" class="btn btn-default extra-nav" title="Explore"><i class="icon-globe"></i>&nbsp; Explore</a>
+        <a href="{{ path('adstacy_app_trending') }}" class="btn btn-default extra-nav" title="Trending"><i class="icon-rocket"></i>&nbsp; Trending</a>
+        <div class="btn-group">
+          <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+            <i class="icon-star"></i>
+          </button>
+          <ul class="dropdown-menu pull-right">
+            <li><a href="{{ path('adstacy_app_page_show', {key: 'about'}) }}">{{"about"|trans}}</a></li>
+            <li><a href="{{ path('adstacy_app_page_show', {key: 'terms'}) }}">{{"terms"|trans}}</a></li>
+            <li><a href="{{ path('adstacy_app_page_show', {key: 'privacy-policy'}) }}">{{"privacy"|trans}}</a></li>
+            <li><a href="{{ path('adstacy_app_contact') }}">{{"contact_us"|trans}}</a></li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
 </header>
