Move extra navbar to top.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -167,10 +167,25 @@
 }
 
 #extra-nav-box {
+  background-color: #333;
   border-top: 1px solid @border-color;
 
   .adstacy-container {
-    text-align: center;
+  }
+
+  .btn {
+    color: #fff;
+    font-size: 12px;
+  }
+
+  .btn:hover {
+    color: #ccc;
+  }
+
+  .caret {
+    border-top-color: #fff;
+    display: inline-block;
+    margin-left: 5px;
   }
 }
 
