--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -1,4 +1,25 @@
 <header id="site-header" class="navbar navbar-default navbar-fixed-top">
+  <div id="extra-nav-box">
+    <div class="adstacy-container">
+      <div class="btn-group">
+        <a href="{{ path('adstacy_app_stream') }}" class="btn extra-nav" title="{{"stream"|trans}}"><i class="icon-home"></i>&nbsp; {{"stream"|trans|upper}}</a>
+        <a href="{{ path('adstacy_app_explore') }}" class="btn extra-nav" title="Explore"><i class="icon-globe"></i>&nbsp; EXPLORE</a>
+        <a href="{{ path('adstacy_app_trending') }}" class="btn extra-nav" title="Trending"><i class="icon-rocket"></i>&nbsp; TRENDING</a>
+      </div>
+      <div class="btn-group pull-right">
+        <a class="btn dropdown-toggle" data-toggle="dropdown">
+          SITE INFO
+          <i class="caret"></i>
+        </a>
+        <ul class="dropdown-menu pull-right">
+          <li><a href="{{ path('adstacy_app_page_show', {key: 'about'}) }}">{{"about"|trans}}</a></li>
+          <li><a href="{{ path('adstacy_app_page_show', {key: 'terms'}) }}">{{"terms"|trans}}</a></li>
+          <li><a href="{{ path('adstacy_app_page_show', {key: 'privacy-policy'}) }}">{{"privacy"|trans}}</a></li>
+          <li><a href="{{ path('adstacy_app_contact') }}">{{"contact_us"|trans}}</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
   <div class="adstacy-container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -99,27 +120,6 @@
         <li><a href="{{ path('fos_user_security_logout') }}"><i class="icon-off"></i>&nbsp; {{"logout"|trans}}</a></li>
         {% endif %}
       </ul>
-    </div>
-  </div>
-
-  <div id="extra-nav-box">
-    <div class="adstacy-container">
-      <div class="btn-group navbar-btn">
-        <a href="{{ path('adstacy_app_stream') }}" class="btn btn-default extra-nav" title="{{"stream"|trans}}"><i class="icon-home"></i>&nbsp; {{"stream"|trans}}</a>
-        <a href="{{ path('adstacy_app_explore') }}" class="btn btn-default extra-nav" title="Explore"><i class="icon-globe"></i>&nbsp; Explore</a>
-        <a href="{{ path('adstacy_app_trending') }}" class="btn btn-default extra-nav" title="Trending"><i class="icon-rocket"></i>&nbsp; Trending</a>
-        <div class="btn-group">
-          <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-            <i class="icon-star"></i>
-          </button>
-          <ul class="dropdown-menu pull-right">
-            <li><a href="{{ path('adstacy_app_page_show', {key: 'about'}) }}">{{"about"|trans}}</a></li>
-            <li><a href="{{ path('adstacy_app_page_show', {key: 'terms'}) }}">{{"terms"|trans}}</a></li>
-            <li><a href="{{ path('adstacy_app_page_show', {key: 'privacy-policy'}) }}">{{"privacy"|trans}}</a></li>
-            <li><a href="{{ path('adstacy_app_contact') }}">{{"contact_us"|trans}}</a></li>
-          </ul>
-        </div>
-      </div>
     </div>
   </div>
 </header>
