--- a/src/Adstacy/AppBundle/Resources/public/less/layout/notification.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/notification.less
@@ -1,7 +1,7 @@
 @import "../variables.less";
 @import "../mixins.less";
 
-#notif-btn {
+#notif-btn, #notif-mobile-btn {
   display: inline-block;
   position: relative;
 
@@ -11,7 +11,6 @@
     bottom: -4px;
   }
 }
-
 
 .open > #top-notifications {
   display: block;
@@ -29,7 +28,7 @@
   & > li:first-child {
     border-top: 0;
   }
-  
+
   & > li:hover {
     background-color: #eee;
     cursor: pointer;
@@ -112,7 +111,7 @@
 #mobile-nav {
   .notif-count {
     background-color: #333;
-    float: right; 
+    float: right;
     margin-right: 20px;
   }
 }
