--- a/src/Adstacy/AppBundle/Resources/public/less/layout/feeds.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/feeds.less
@@ -9,7 +9,7 @@
     & > a {
       color: #333;
       display: block;
-      font-size: 16px;
+      font-size: 14px;
       padding: 10px 15px;
     }
 
@@ -22,6 +22,11 @@
 
   & > li:first-child {
     border-top: 0;
+  }
+
+  small {
+    color: #aaa;
+    font-size: 12px;
   }
 }
 
