--- a/src/Adstacy/AppBundle/Resources/views/App/tag_list.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/tag_list.html.twig
@@ -1,14 +1,12 @@
-<li><a href="{{ path('adstacy_app_search', {q: 'jual'}) }}" title="Jual">Jual <small>#jual</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'beli'}) }}" title="Beli">Beli <small>#beli</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'lowongankerja'}) }}" title="Lowongan Kerja">Lowongan Kerja <small>#lowongankerja</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'promo'}) }}" title="Promo">Promo <small>#promo</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'event'}) }}" title="Event">Event <small>#event</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'blog'}) }}" title="Blog">Blog <small>#blog</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'startup'}) }}" title="Startup">Startup <small>#startup</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'website'}) }}" title="Website">Website <small>#website</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'sale'}) }}" title="Sale">Sale <small>#sale</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'cucigudang'}) }}" title="Cuci Gudang">Cuci Gudang <small>#cucigudang</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'game'}) }}" title="Game">Game <small>#game</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'gadget'}) }}" title="Gadget">Gadget <small>#gadget</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'cemilan'}) }}" title="Cemilan">Cemilan <small>#cemilan</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'unik'}) }}" title="Unik">Unik <small>#unik</small></a></li>
+  <li><a href="{{ path('adstacy_app_search', {q: 'kuliner'}) }}" title="Stream">Kuliner <small>#kuliner</small></a></li>
+  <li><a href="{{ path('adstacy_app_search', {q: 'cari jodoh'}) }}" title="Stream">Cari Jodoh <small>#cari #jodoh</small></a></li>
+  <li><a href="{{ path('adstacy_app_search', {q: 'diskon'}) }}" title="Stream">Diskon <small>#diskon</small></a></li>
+  <li><a href="{{ path('adstacy_app_search', {q: 'gadget'}) }}" title="Stream">Gadget <small>#gadget</small></a></li>
+  <li><a href="{{ path('adstacy_app_search', {q: 'lowongan'}) }}" title="Stream">Lowongan <small>#lowongan</small></a></li>
+  <li><a href="{{ path('adstacy_app_search', {q: 'fashion'}) }}" title="Stream">Fashion <small>#fashion</small></a></li>
+  <li><a href="{{ path('adstacy_app_search', {q: 'game'}) }}" title="Stream">Game <small>#game</small></a></li>
+  <li><a href="{{ path('adstacy_app_search', {q: 'movie'}) }}" title="Stream">Movie <small>#movie</small></a></li>
+  <li><a href="{{ path('adstacy_app_search', {q: 'event'}) }}" title="Stream">Event <small>#event</small></a></li>
+  <li><a href="{{ path('adstacy_app_search', {q: 'medan'}) }}" title="Stream">Medan <small>#medan</small></a></li>
+  <li><a href="{{ path('adstacy_app_search', {q: 'jakarta'}) }}" title="Stream">Jakarta <small>#jakarta</small></a></li>
+  <li><a href="{{ path('adstacy_app_search', {q: 'indonesia'}) }}" title="Stream">Indonesia <small>#indonesia</small></a></li>
