fix notif-mobile-btn display.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/notification.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/notification.less
@@ -1,10 +1,13 @@
 @import "../variables.less";
 @import "../mixins.less";
 
-#notif-btn, #notif-mobile-btn {
+#notif-btn {
   display: inline-block;
   position: relative;
+}
 
+#notif-btn,
+#notif-mobile-btn {
   .notif-count {
     position: absolute;
     right: -8px;
