fix body padding.

--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -9,7 +9,7 @@
       <div class="btn-group pull-right">
         <a class="btn dropdown-toggle" data-toggle="dropdown">
           SITE INFO
-          <i class="caret"></i>
+          <i class="icon-angle-down"></i>
         </a>
         <ul class="dropdown-menu pull-right">
           <li><a href="{{ path('adstacy_app_page_show', {key: 'about'}) }}">{{"about"|trans}}</a></li>
