--- a/src/Adstacy/AppBundle/Resources/public/less/layout/notification.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/notification.less
@@ -23,16 +23,16 @@
   font-size: 12px;
   width: 400px;
 
-  & > li {
+  > li {
     border-top: 1px solid #ddd;
     padding: 5px;
   }
 
-  & > li:first-child {
+  > li:first-child {
     border-top: 0;
   }
 
-  & > li:hover {
+  > li:hover {
     background-color: #eee;
     cursor: pointer;
   }
@@ -82,7 +82,7 @@
 }
 
 #all-notifications {
-  & > li:hover {
+  > li:hover {
     background-color: #eee;
     cursor: pointer;
   }
